Fixes the issue for now
This does introduce a new bug with SVG background images—they are appearing incredibly blurry even though they're SVGs. I fear I will have to output raster images.

--- a/components/UncapStar/index.scss
+++ b/components/UncapStar/index.scss
@@ -7,12 +7,6 @@
   height: $size;
   width: $size;
 
-  @media (max-width: $phone) {
-    background-size: 12px;
-    height: 12px;
-    width: 12px;
-  }
-
   @media (min-width: $laptop) {
     &:hover {
       transform: scale(1.2);
@@ -61,5 +55,15 @@
     &:hover {
       background-image: url('/icons/uncap/purple-hover.svg');
     }
+  }
+}
+
+// Phone up to iPhone 14 Pro Max
+@media only screen and (max-width: 430px) and (max-height: 850px) and (-webkit-device-pixel-ratio: 3) {
+  .UncapStar {
+    background-size: cover;
+    image-rendering: crisp-edges;
+    height: 14px;
+    width: 14px;
   }
 }
